@@ -64,7 +64,7 @@ public class ConcurrentHashMultisetBasherTest extends TestCase {
     int nThreads = 20;
     int tasksPerThread = 10;
     int nTasks = nThreads * tasksPerThread;
-    ExecutorService pool = Executors.newFixedThreadPool(nThreads);
+    ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
     ImmutableList<String> keys = ImmutableList.of("a", "b", "c");
     try {
       List<Future<int[]>> futures = Lists.newArrayListWithExpectedSize(nTasks);
