@@ -372,7 +372,7 @@ public class AbstractFutureTest extends TestCase {
   }
 
   public void testCompletionFinishesWithDone() {
-    ExecutorService executor = Executors.newFixedThreadPool(10);
+    ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     for (int i = 0; i < 50000; i++) {
       final AbstractFuture<String> future = new AbstractFuture<String>() {};
       final AtomicReference<String> errorMessage = Atomics.newReference();
@@ -432,7 +432,7 @@ public class AbstractFutureTest extends TestCase {
                 + 50 // for the listeners
                 + 50 // for the blocking get threads,
                 + 1); // for the main thread
-    final ExecutorService executor = Executors.newFixedThreadPool(barrier.getParties());
+    final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     final AtomicReference<AbstractFuture<String>> currentFuture = Atomics.newReference();
     final AtomicInteger numSuccessfulSetCalls = new AtomicInteger();
     Callable<@Nullable Void> completeSuccessfullyRunnable =
@@ -617,7 +617,7 @@ public class AbstractFutureTest extends TestCase {
                 + size // for the listeners
                 + size // for the get threads,
                 + 1); // for the main thread
-    final ExecutorService executor = Executors.newFixedThreadPool(barrier.getParties());
+    final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     final AtomicReference<AbstractFuture<String>> currentFuture = Atomics.newReference();
     final AtomicReference<AbstractFuture<String>> setFutureFuture = Atomics.newReference();
     final AtomicBoolean setFutureSetSuccess = new AtomicBoolean();
@@ -750,7 +750,7 @@ public class AbstractFutureTest extends TestCase {
             2 // for the setter threads
                 + 1 // for the blocking get thread,
                 + 1); // for the main thread
-    final ExecutorService executor = Executors.newFixedThreadPool(barrier.getParties());
+    final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     final AtomicReference<AbstractFuture<String>> currentFuture = Atomics.newReference();
     final AtomicBoolean setFutureSuccess = new AtomicBoolean();
     final AtomicBoolean cancellationSuccess = new AtomicBoolean();
