@@ -47,7 +47,7 @@ public class AtomicLongMapBasherTest extends TestCase {
 
     final AtomicLongMap<String> map = AtomicLongMap.create();
 
-    ExecutorService threadPool = Executors.newFixedThreadPool(nThreads);
+    ExecutorService threadPool = Executors.newVirtualThreadPerTaskExecutor();
     ArrayList<Future<Long>> futures = new ArrayList<>();
     for (int i = 0; i < nTasks; i++) {
       futures.add(
